# PASCal

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CNAME  CONTRIBUTING.md  LICENSE.md  PASCal 2.bib  PASCal.py  README.md  Test_Values.md  all.mod  app.py  cgistrain_online_from_server.f90  mkdocs.yml  paper.bib  paper.md  pyproject.toml  require.temp  requirements-test.txt  requirements.txt  requirements_conda.txt  requirements_temp.txt  test_app.py
.github/workflows/: ci.yml  deploy.yml
docs/: .pages  api_reference.md
docs/api_reference/: .pages  core.md  fitting.md  options.md  utils.md
examples/: .pages  electrochemical.ipynb  fitting_example.ipynb  pressure.ipynb  temperature.ipynb
paper/: paper.bib  paper.md
src/PASCal/: __init__.py  app.py  constants.py  core.py  fitting.py  options.py  plotting.py  utils.py
src/PASCal/_legacy/: __init__.py
src/PASCal/static/: styles.css
src/PASCal/templates/: electrochem.html  index.html  pressure.html  temperature.html
static/: styles.css
templates/: electrochem.html  index.html  pressure.html  temperature.html  test.html
tests/: conftest.py  test_app.py  test_utils.py
tests/data/: sample_P.tsv  sample_T.tsv
tests/data/sample_T/: delta_length.tsv  output.tsv  principal_axes.tsv  volumes.tsv
tests/data/sample_p/: bm.tsv  compressibilities.tsv  delta_length.tsv  output.tsv  principal_axes.tsv  volumes.tsv
tests/data/sample_p_tricky/: input.tsv
tests/data/sample_q/: change_in_length.tsv  charge_derivative_strain.tsv  input.tsv  output.tsv  principal_axes.tsv  volumes.tsv
