[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PASCal"
version = "2.0.0"
description = "Principal Axis Strain Calculator (PASCal) is a web tool designed to help scientists analyse non-ambient lattice parameter data."
readme = "README.md"
keywords = ["materials", "chemistry", "fitting", "strain", "lattice"]
license = "MIT"
authors = [ "Matthew Cliffe <matthew.cliffe@nottingham.ac.uk>", ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
homepage = "https://pascal-notts.azurewebsites.net"
repository = "https://github.com/MJCliffe/PASCal"
packages = [{ include = "PASCal", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "*"
Jinja2 = "*"
numpy = "*"
pandas = "*"
plotly = "*"
scipy = "*"
statsmodels = "*"
pytest = { version = "*", optional = true }
beautifulsoup4 = { version = "*", optional = true }
mkdocs = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }
mkdocstrings = { version = "*", optional = true, extras = ["python-legacy"] }
mkdocs-awesome-pages-plugin = { version = "*", optional = true }
mkdocs-jupyter = { version = "*", optional = true }
notebook = { version = "*", optional = true }

[tool.poetry.extras]
test = ["pytest", "beautifulsoup4"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocs-awesome-pages-plugin", "notebook", "mkdocs-jupyter"]
