[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PASCal"
version = "2.1.0"
description = "Principal Axis Strain Calculator (PASCal) is a web tool designed to help scientists analyse non-ambient lattice parameter data."
readme = "README.md"
keywords = ["materials", "chemistry", "fitting", "strain", "lattice"]
license = "MIT"
authors = [ "Matthew Cliffe <matthew.cliffe@nottingham.ac.uk>", ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
homepage = "https://pascalapp.co.uk"
documentation = "https://docs.pascalapp.co.uk"
repository = "https://github.com/MJCliffe/PASCal"
packages = [{ include = "PASCal", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
Flask = "^2.3"
Jinja2 = "*"
numpy = "*"
pandas = "*"
plotly = "*"
scipy = "*"
statsmodels = "*"
typing-extensions = { version = "*", markers = "python_version <= '3.9'" }
pytest = { version = "*", optional = true }
beautifulsoup4 = { version = "*", optional = true }
mkdocs = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }
mkdocstrings = { version = "*", optional = true, extras = ["python-legacy"] }
mkdocs-awesome-pages-plugin = { version = "*", optional = true }
mkdocs-jupyter = { version = "*", optional = true }
notebook = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }

[tool.poetry.extras]
test = ["pytest", "beautifulsoup4", "pre-commit", "pre-commit"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocs-awesome-pages-plugin", "notebook", "mkdocs-jupyter"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
extend-exclude = [
    "providers",
]
target-version = "py310"
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
